--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,13 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Installing dependencies...
-      - npm install
+      - npm ci
+  pre_build:
+    commands:
+      - npm test --if-present
   build:
     commands:
-      - echo Building application...
-      - npm run build || echo "No build step needed"
+      - zip -r artifact.zip . -x "*.git*"
 artifacts:
   files:
-    - '**/*'
+    - artifact.zip
