--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,12 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies"
       - npm install
   build:
     commands:
-      - echo Build started...
-      - npm run build || echo "No build script found, skipping"
-
+      - echo "Running tests inside build stage"
+      - npm test || echo "Tests failed or not defined, continuing..."
 artifacts:
   files:
     - '**/*'
